--- a/www/css/index.css
+++ b/www/css/index.css
@@ -23,21 +23,37 @@ body {
     margin: 0;
     padding: 0;
     font-family: system;
+    background-color: #f4f4f4;
 }
 #map-canvas { 
-  height: 35%;
+  height: 40%;
   vertical-align: middle;
   padding: 1em;
 }
+#queries{
+  margin-top:3em;
+  padding: 2em;
+}
 
+#queries label{
+  font-weight: bold;
+  padding: 0;
+}
+
+label{
+  font-weight: bold;
+  padding-left: 1em;
+  margin-top: 1em;
+}
 #search {
   background-color: white;
   border: 1px solid #aaa;
   border-radius: 4px;
-  width: 79.25%;
-  height: 32px;
+  width: 97.25%;
+  height: 30px;
   font-size: 100%;
-  padding-left:0.5em;
+  padding-left:0.4em;
+  margin-bottom: 0.3em;
 }
 #search:focus {
   background-color: white;
@@ -45,19 +61,42 @@ body {
   border-radius: 4px;
 }
 
-#queries select{
-  width: 80%;
-  height: 31px;
+select{
+  background-color: white;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  width: 100%;
+  height: 30px;
+  font-size: 100%;
 }
 
-.card-panel, .card{
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  }
+#mySidenav input, #mySidenav select{
+  background-color: white;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  height: 30px;
+  font-size: 100%;
+  padding-left:0.4em;
+  margin-bottom: 0.3em;
+  width: 200px;
+  margin-left: 1em;
+  margin-right: 5em;
+}
+#mySidenav input:focus, #mySidenav select:focus {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+#mySidenav select{
+  width: 208px;
+  height: 35px;
+}
+
   .card {
-    position: absolute;
+
+    position: relative;
     bottom: 0;
-    margin: 0.5rem 0 1rem 0;
     background-color: #fff;
     -webkit-transition: -webkit-box-shadow .25s;
     transition: -webkit-box-shadow .25s;
@@ -67,6 +106,8 @@ body {
     height: 40%;
     width: 100%;
     overflow-y: scroll;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   }
   
   .card .card-action {
@@ -111,9 +152,163 @@ body {
     display: block;
   }
   
-  hr {
-    -webkit-box-sizing: content-box;
-            box-sizing: content-box;
-    height: 0;
-  }
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #c62828;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    color:white;
+}
+
+.sidenav h1{
+  margin-left:0.5em;
+}
+
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    overflow: hidden;
+    width: 100%;
+    padding: .5em;
+    display: flex;
+    align-items: center;
+    background-color: #c62828;
+    /* Material Dark Red taken from Material Color UI */
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    animation: fadeIn 1s;
+    z-index: 1;
+}
+
+nav a{
+
+    width: 3%;
+    display: block;
+    line-height: 1px;
+    color: #fbfbfb;
+    transition: background-color 0.2s ease;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid white;
+    background-color: transparent;
+    padding: 14px 10px;
+    font-size: 12px;
+    cursor: pointer;
+}
+nav span{
+    text-align: left;
+    padding-left: 3em;
+    font-size:16pt;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    display: block;
+    line-height: 50px;
+    color: #fbfbfb;
+    transition: background-color 0.2s ease;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+  position: relative;
+
+  display: block;
+  margin: 20px auto;
+  padding: 0;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
   
+  background-color: #c62828;
+  color: #ecf0f1;
+  
+  transition: background-color .3s;
+}
+
+.btn:hover, .btn:focus {
+  background-color: #b71c1c;
+}
+
+.btn > * {
+  position: relative;
+}
+
+.btn span {
+  display: block;
+  padding: 12px 24px;
+  text-transform: uppercase;
+}
+
+.btn:before {
+  content: "";
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  display: block;
+  width: 0;
+  padding-top: 0;
+    
+  border-radius: 100%;
+  
+  background-color: rgba(236, 240, 241, .3);
+  
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+  
+  transition: width .2s ease-out, padding-top .2s ease-out;
+}
