--- a/www/css/index.css
+++ b/www/css/index.css
@@ -35,15 +35,28 @@ body {
   padding: 2em;
 }
 
+#cityInfo{
+  display:none;
+}
+
+#buttons{
+  margin-top:3em;
+  padding: 2em;
+}
 #queries label{
   font-weight: bold;
   padding: 0;
+  margin-top: 1em;
+}
+
+.boxes{
+  margin-bottom:1em;
 }
 
 label{
   font-weight: bold;
   padding-left: 1em;
-  margin-top: 1em;
+  
 }
 #search {
   background-color: white;
